add loadingitem css

--- a/src/--var.styl
+++ b/src/--var.styl
@@ -2,3 +2,7 @@
 $font-size = 14px
 $blue = #00a1d6
 $pink = #fb7299
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
